--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -26,6 +26,7 @@ $space-sm: 5px;
 $space-md: 10px;
 $space-lg: 15px;
 $space-xl: 20px;
+$space-xxl: 50px;
 $col-spacing: 2.5%;
 
 $header-min-height:50px;
