--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -5,6 +5,7 @@ $pink: #ed2f8b;
 $yellow: #ffcf7b;
 $accent: #111;
 $light-grey: #aeb2bf;
+$grey: #6b6d74;
 $dark-grey: #383a42;
 $very-dark-grey: #1d1e21;
 
