--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -46,19 +46,9 @@
     top:-1px;
     color:white;
     background-color:#ffcf7b;
-    display:grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(2, .5fr);
-    height: 100%;
     background-image: url('../img/watermarks.svg');
     background-size: auto 100%;
     background-position:50% 0%;
-
-    @media (min-width: $screen-md){
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        grid-column-gap: 13%;
-    }
 }
 
 #capabilities-logos{
@@ -280,13 +270,13 @@
 
 
 
-//blog
+//BLOG
 .blog-list{
-    grid-gap: $page-padding;
+    grid-column-gap:$page-padding;   
 }
 
 .blog-card{
-    //box-shadow: -7px 7px 7px rgba(0, 0, 0, 0.3);
+    margin-bottom:7%;
     overflow:hidden;
 }
 
@@ -294,41 +284,49 @@
     background: rgba(0, 0, 0, 0);
 }
 
-.blog-card-img{
+.blog-card-img-container{
     position:relative;
     overflow:hidden;
     width:30%;
 }
 
+.blog-card-img{
+    position:absolute;
+    object-fit:cover;
+    min-width: 100%;
+    min-height: 100%;
+}
+
 .blog-card-img-overlay{
     position:absolute;
+    z-index:2;
     width:100%;
     height:100%;
     background: rgba(0, 0, 0, 0.25);
     transition: background 250ms ease-out;
 }
 
-.blog-card-text{
+.blog-card-text-container{
     width:70%;
     padding:2.5%;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
     border-image-slice: 1;
     border-width: 1px;
+    border-top:0px;
+    border-right:0px;
     border-bottom:1px solid;
     border-left:1px solid;
     border-image-source: linear-gradient(to left, $yellow, $pink);
 }
 
-.blog-card-text h3{
+.blog-card-text-container h3{
     margin:0px;
 }
 
-.blog-card-text small{
+.blog-card-text-container small{
     color: $grey;
     text-align:center;
 }
-
-
 
 .blog-author{
     @media(max-width: $screen-md){
@@ -338,7 +336,7 @@
  }
  
  .blog-header{
-    grid-column-gap:7%;
+    grid-column-gap:30px;
  }
  
  .blog-img{
