--- a/static/styles/scss/_variables.scss
+++ b/static/styles/scss/_variables.scss
@@ -23,6 +23,8 @@ $screen-xxl:3000px;
 /* Spacing */
 $page-width:85%;
 $page-padding: 7.5%;
+$grid-column-spacing: 13%;
+$grid-column-spacing-px: 30px;
 $space-sm: 5px;
 $space-md: 10px;
 $space-lg: 15px;
