--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -22,7 +22,6 @@ body {
 
 .page {
   position: relative;
-  display: flex;
   z-index: 1;
   width: 85%;
   padding-left: 7.5%;
@@ -42,50 +41,30 @@ body {
 .col-1 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-}
-
-.col-1-sm {
-  display: grid;
-}
-@media (min-width: 0px) {
-  .col-1-sm {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-  }
+  grid-template-rows: auto;
 }
 
 .col-2 {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-}
-@media (min-width: 699px) {
-  .col-2 {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-column-gap: 13%;
-  }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 13%;
 }
 
-.col-2-sm {
+.col-3 {
   display: grid;
-}
-@media (min-width: 0px) {
-  .col-2-sm {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-column-gap: 13%;
-  }
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 13%;
 }
 
-.col-2-md {
+.col-1-mdlg {
   display: grid;
 }
-@media (min-width: 576px) {
-  .col-2-md {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+@media (max-width: 918px) {
+  .col-1-mdlg {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 13%;
   }
 }
@@ -93,23 +72,74 @@ body {
 .col-2-mdlg {
   display: grid;
 }
-@media (min-width: 699px) {
+@media (max-width: 918px) {
   .col-2-mdlg {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 13%;
   }
 }
 
-.col-3 {
+.col-3-mdlg {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(3, 1fr);
 }
-@media (min-width: 699px) {
-  .col-3 {
+@media (max-width: 918px) {
+  .col-3-mdlg {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 13%;
+  }
+}
+
+.col-1-md {
+  display: grid;
+}
+@media (max-width: 699px) {
+  .col-1-md {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: auto;
+  }
+}
+
+.col-2-md {
+  display: grid;
+}
+@media (max-width: 699px) {
+  .col-2-md {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 13%;
+  }
+}
+
+.col-3-md {
+  display: grid;
+}
+@media (max-width: 699px) {
+  .col-3-md {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 13%;
+  }
+}
+
+.col-1-sm {
+  display: grid;
+}
+@media (max-width: 576px) {
+  .col-1-sm {
+    grid-template-columns: 1fr;
+    grid-auto-rows: max-content;
+  }
+}
+
+.col-2-sm {
+  display: grid;
+}
+@media (max-width: 576px) {
+  .col-2-sm {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 13%;
   }
 }
@@ -117,17 +147,12 @@ body {
 .col-3-sm {
   display: grid;
 }
-@media (min-width: 0px) {
+@media (max-width: 576px) {
   .col-3-sm {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 13%;
   }
-}
-
-.space-evenly {
-  display: flex;
-  justify-content: space-between;
 }
 
 .flex-y {
@@ -140,18 +165,15 @@ body {
   flex-direction: row;
 }
 
+.space-evenly {
+  display: flex;
+  justify-content: space-between;
+}
+
 .center-content-x {
   display: flex;
   justify-items: center;
   justify-content: center;
-}
-
-@media (max-width: 699px) {
-  .center-content-x-sm {
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-  }
 }
 
 .center-content-y {
@@ -160,13 +182,45 @@ body {
 }
 
 @media (max-width: 699px) {
-  .center-content-y-sm {
+  .center-content-x-md {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 699px) {
+  .center-content-y-md {
     display: flex;
     align-items: center;
   }
 }
 
 @media (max-width: 699px) {
+  .center-content-xy-md {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .center-content-x-sm {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .center-content-y-sm {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media (max-width: 576px) {
   .center-content-xy-sm {
     display: flex;
     justify-items: center;
@@ -175,13 +229,13 @@ body {
   }
 }
 
-@media (max-width: 699px) {
+@media (max-width: 576px) {
   .hidden-sm {
     display: none;
   }
 }
 
-@media (max-width: 918px) {
+@media (max-width: 699px) {
   .hidden-md {
     display: none;
   }
@@ -257,7 +311,7 @@ body {
 }
 
 .no-m {
-  margin: 0px;
+  margin: 0px !important;
 }
 
 .no-m-t {
@@ -288,8 +342,16 @@ body {
   margin-bottom: 20px;
 }
 
+.m-b-xxl {
+  margin-bottom: 50px;
+}
+
 .p-t-xxl {
   padding-top: 50px;
+}
+
+.no-p {
+  padding: 0px !important;
 }
 
 .white-bg {
@@ -347,6 +409,25 @@ img {
 
 .img-full-width {
   width: 100%;
+}
+
+.tag-list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.tag-list li {
+  color: #fcfcfc;
+  background: linear-gradient(-62deg, #ffcf7b, #ed2f8b);
+  display: inline-block;
+  margin: 0.4rem;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: auto;
+  border-radius: 3rem;
+  background-color: #6b6d74;
 }
 
 body {
@@ -426,6 +507,20 @@ hr {
   height: 1px;
   background-color: #aeb2bf;
   border: none;
+}
+
+a {
+  color: #1e83d6;
+  text-decoration: none;
+}
+
+.text-muted {
+  text-decoration: none;
+  color: inherit;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .fa-circle {
@@ -564,20 +659,9 @@ input {
   top: -1px;
   color: white;
   background-color: #ffcf7b;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(2, 0.5fr);
-  height: 100%;
   background-image: url("../img/watermarks.svg");
   background-size: auto 100%;
   background-position: 50% 0%;
-}
-@media (min-width: 699px) {
-  #page2 {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    grid-column-gap: 13%;
-  }
 }
 
 #capabilities-logos {
@@ -816,10 +900,11 @@ input {
 }
 
 .blog-list {
-  grid-gap: 7.5%;
+  grid-column-gap: 7.5%;
 }
 
 .blog-card {
+  margin-bottom: 7%;
   overflow: hidden;
 }
 
@@ -827,36 +912,46 @@ input {
   background: rgba(0, 0, 0, 0);
 }
 
-.blog-card-img {
+.blog-card-img-container {
   position: relative;
   overflow: hidden;
   width: 30%;
 }
 
+.blog-card-img {
+  position: absolute;
+  object-fit: cover;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 .blog-card-img-overlay {
   position: absolute;
+  z-index: 2;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.25);
   transition: background 250ms ease-out;
 }
 
-.blog-card-text {
+.blog-card-text-container {
   width: 70%;
   padding: 2.5%;
   box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
   border-image-slice: 1;
   border-width: 1px;
+  border-top: 0px;
+  border-right: 0px;
   border-bottom: 1px solid;
   border-left: 1px solid;
   border-image-source: linear-gradient(to left, #ffcf7b, #ed2f8b);
 }
 
-.blog-card-text h3 {
+.blog-card-text-container h3 {
   margin: 0px;
 }
 
-.blog-card-text small {
+.blog-card-text-container small {
   color: #6b6d74;
   text-align: center;
 }
@@ -869,7 +964,7 @@ input {
 }
 
 .blog-header {
-  grid-column-gap: 7%;
+  grid-column-gap: 30px;
 }
 
 .blog-img {
@@ -1148,7 +1243,7 @@ svg .path-a {
 #footer-contact {
   order: 1;
 }
-@media (min-width: 699px) {
+@media (min-width: 576px) {
   #footer-contact {
     order: 0;
   }
