--- a/static/styles/scss/_pages.scss
+++ b/static/styles/scss/_pages.scss
@@ -271,8 +271,27 @@
 
 
 //BLOG
+.blog-header-container{
+    background-color: $very-dark-grey;
+    background-image: url('../img/cookie-watermark-left.png');
+    background-size: 66% auto;
+    background-position: 100% 25%;
+    background-repeat: no-repeat;
+    box-shadow: 0px 0px 10px rgba(0,0,0, .3);
+}
+
 .blog-list{
     grid-column-gap:$page-padding;   
+}
+.blog-highlight{
+    @media(max-width: $screen-md){
+        order:+1;
+    }
+}
+
+.blog-highlight small{
+    margin-top: .4rem;
+    padding-top: .5rem;
 }
 
 .blog-card{
