--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,13 +1,28 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
     <head>
-        <link href="static/styles/style.css"  type="text/css" rel="stylesheet"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
-        <script src="static/js/byite.js"></script>
+
+        {% block scripts %}
+            <!-- CUSTOM STYLES -->
+            <link href="static/styles/style.css"  type="text/css" rel="stylesheet"/>
+
+            <!-- jQuery -->        
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+            <!-- FONT AWESOME ICONS -->
+            <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
+
+            <!-- CUSTOM JS -->
+            <script src="static/js/byite.js"></script>
+        {% endblock scripts %}
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="wrapper">
+            
+            <!-- START HEADER -->
             <div id="header-wrapper">
                 <div id="header-bg">
                     <img class="header-logo-blob" src="static/img/nav-logo-blob.svg"/>
@@ -41,40 +56,18 @@
                     </div>
                 </div>
             </div>
+            <!-- END HEADER -->
+
+            <!--START CONTENT -->
             <div id="page-wrapper">
-                <div class="page p-t-xxl flex-y">
-                    <div class="blog-header col-2 col-1-sm w-70 w-100-sm m-t-xxl">
-                        <div class="blog-author center-self-x-sm align-self-end w-35">
-                            <div class="img-circle img-circle-container"><img class="img-circle-img" alt="image" src="static/img/profile-img.jpg" /></div>
-                            <h5 class="m-t-lg text-center">Scott James</h5>
-                        </div>
-                        <div class="center-content-y center-content-xy-sm">
-                            <div class="text-center-sm">
-                                <h1 class="no-m">Blog title.</h1>
-                                <h5>Blog sub-heading.</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="page flex-x m-t-xxl">
-                        <div><i class="fa fa-eye"></i> Views</div>
-                        <div><i class="fa fa-calendar"></i> Date</div>
-                        <div><i class="fa fa-clock"></i> Read time</div>
-                    </div>
-                </div>
-                <div class="blog-img w-100 m-t-xxl">
-                    <img class="img-full-width blog-img-frame" src="static/img/blog-img-frame.svg"/>
-                    <img class="img-full-width blog-title-img" src="static/img/kirkron-logo.svg"/>
-                    <img class="img-full-width blog-img-frame-bottom" src="static/img/blog-img-frame.svg"/>
-                </div>
-                <div class="page m-t-xxl">
-                    <div class="blog-content">
-                        Actual blog content
-                    </div>
-                </div>
+
+                {% block content %}
+                {% endblock %}
+
             </div>
-            <div class="center-content-x">
-                <hr class="w-70 m-t-xxl">
-            </div>
+            <!-- END CONTENT -->
+
+            <!-- START FOOTER -->
             <div class="col-3 col-1-sm" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
@@ -109,10 +102,12 @@
                     </p>
                     <div class="input-container">
                         <input class="input-field" type="text" placeholder="Email" name="email"/>
-                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover"></i>
+                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover center-self-y"></i>
                     </div>
                 </div>
             </div>
+            <!-- END FOOTER -->
+
         </div>
     </body>
 </html>
