--- a/static/styles/scss/_navigation.scss
+++ b/static/styles/scss/_navigation.scss
@@ -133,6 +133,7 @@
     font-size: 1.5rem;
     padding:6%;
     padding-left:12%;
+    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
 
     @media (min-width: $screen-md){
         display:block;
