--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1156,6 +1156,7 @@ input {
   font-size: 1.5rem;
   padding: 6%;
   padding-left: 12%;
+  text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
 }
 @media (min-width: 699px) {
   .nav-item {
