--- a/static/styles/scss/_base.scss
+++ b/static/styles/scss/_base.scss
@@ -426,3 +426,47 @@ img{
 
 }
 
+.loading{
+   position:relative;
+
+   &::before{
+      content: '';
+      position:absolute;
+      display:flex;
+      top:-5%;
+      left:-5%;
+      width:110%;
+      height:110%;
+      border-radius:5px;
+      background-color:rgba(0,0,0,.2);
+      box-shadow:0px 0px 15px rgba(0,0,0,.2);
+   }
+}
+
+.loader {
+   position:absolute;
+   top:calc(50% - 35px);
+   left:calc(50% - 35px);
+   width: 70px;
+   height: 70px;
+   border-style: solid;
+   border-top-color: $yellow;
+   border-right-color: $yellow;
+   border-left-color: transparent;
+   border-bottom-color: transparent;
+   border-radius: 50%;
+   box-sizing: border-box;
+   animation: rotate 3s ease-in-out infinite;
+   transform: rotate(-200deg);
+ }
+ @keyframes rotate {
+   0% { border-width: 10px; border-top-color: $yellow; border-right-color: $yellow;}
+   25% { border-width: 3px; }
+   50% { 
+     transform: rotate(115deg); 
+     border-width: 10px;
+     border-top-color: $pink; border-right-color: $pink;
+   }
+   75% { border-width: 3px;}
+   100% { border-width: 10px; border-top-color: $yellow; border-right-color: $yellow;}
+ }
