--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,7 +5,7 @@
 
         {% block scripts %}
             <!-- CUSTOM STYLES -->
-            <link href="static/styles/style.css"  type="text/css" rel="stylesheet"/>
+            <link href="{% static 'styles/style.css' %}"  type="text/css" rel="stylesheet"/>
 
             <!-- jQuery -->        
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -14,33 +14,33 @@
             <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
 
             <!-- CUSTOM JS -->
-            <script src="static/js/byite.js"></script>
+            <script src="{% static 'js/byite.js' %}"></script>
         {% endblock scripts %}
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="wrapper">
-            
+
             <!-- START HEADER -->
             <div id="header-wrapper">
                 <div id="header-bg">
-                    <img class="header-logo-blob" src="static/img/nav-logo-blob.svg"/>
+                    <img class="header-logo-blob" src="{% static 'img/nav-logo-blob.svg' %}"/>
                 </div>
                 <div id="header-logo-wrapper">
-                    <a href="index.html">
-                        <img class="header-logo" src="static/img/byite-logo-color.svg"/>
+                    <a href="{% url 'home' %}">
+                        <img class="header-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
                     </a>
                 </div>
                 <div>
                     <div class="nav-wrapper">
                         <nav id="site-nav">
-                            <a class="nav-item text-muted" href="index.html#page3">Projects</a>
-                            <a class="nav-item text-muted" href="blog-list.html">Blog</a>
-                            <a class="nav-item nav-item-last text-muted" href="index.html#page4">Contact</a>
+                            <a class="nav-item text-muted" href="{% url 'home' %}#page3">Projects</a>
+                            <a class="nav-item text-muted" href="{% url 'blog-list' %}">Blog</a>
+                            <a class="nav-item nav-item-last text-muted" href="{% url 'home' %}#page4">Contact</a>
                         </nav>
                         <div id="nav-background">
-                            <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
+                            <img id="mobile-nav-cookie" src="{% static 'img/cookie-watermark-left.png' %}"/>
                         </div>
                     </div>
                     <div id="menu-toggle">
@@ -71,12 +71,12 @@
             <div class="col-3 col-1-sm" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
-                        <img class="w-50" id="footer-logo" src="static/img/byite-logo-color.svg"/>
+                        <img class="w-50" id="footer-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
                     </div>
                     <div class="w-50 space-evenly m-t-lg">
-                        <a class="center-self-x footer-icon" href="https://github.com/scott-j5"><img src="static/img/github-logo.svg"/></a>
-                        <a class="center-self-x footer-icon" href="https://www.linkedin.com/in/scottjames5"><img src="static/img/linkedin-logo.svg"/></a>
-                        <a class="center-self-x footer-icon" href="https://www.youtube.com/channel/UC84gV5HcQWphJ7lD7X0bXlA"><img src="static/img/youtube-logo.svg"/></a>
+                        <a class="center-self-x footer-icon" href="https://github.com/scott-j5"><img src="{% static 'img/github-logo.svg' %}"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.linkedin.com/in/scottjames5"><img src="{% static 'img/linkedin-logo.svg' %}"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.youtube.com/channel/UC84gV5HcQWphJ7lD7X0bXlA"><img src="{% static 'img/youtube-logo.svg' %}"/></a>
                     </div>
                 </div>
                 <div class="m-t-md m-b-xl" id="footer-contact">
@@ -100,10 +100,15 @@
                     <p>
                         Sign up if you would like to be notified about new blog posts or other events.
                     </p>
-                    <div class="input-container">
-                        <input class="input-field" type="text" placeholder="Email" name="email"/>
-                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover center-self-y"></i>
-                    </div>
+                    <form id="footer-subscribe" action="{% url 'subscribe' %}" method="POST">
+                        <div class="input-container">
+                            {% csrf_token %}
+                            <input class="input-field" type="text" placeholder="Email" name="email"/>
+                            <button class="button-muted" type="submit" name="submit" />
+                                <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover center-self-y"></i>
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <!-- END FOOTER -->
