--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,4 +1,5 @@
 {% extends "app/base.html" %}
+{% load static %}
 
 {% block content %}
 <!-- START PAGE 1 -->
@@ -12,7 +13,7 @@
         </div>
     </div>
     <div id="landing-logo-container">
-        <img id="landing-logo" src="static/img/byite-logo-color.svg"/>
+        <img id="landing-logo" src="{% static 'img/byite-logo-color.svg' %}"/>
     </div>
 </div>
 <!-- END PAGE 1 -->
@@ -22,39 +23,39 @@
     <div id="capabilities-logos">
         <div class="capability">
             <div class="capability-text"><strong>AWS cloud</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/aws-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/aws-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Python</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/python-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/python-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Django framework</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/django_logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/django_logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Postgres</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/postgres-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/postgres-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Github</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/github-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/github-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Javascript</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/js-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/js-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>SQL server and BI stack</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/sql-server-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/sql-server-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Adobe cc</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/cc-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/cc-logo.svg' %}"/></div>
         </div>
         <div class="capability">
             <div class="capability-text"><strong>Ubuntu</strong></div>
-            <div class="capability-logo-container"><img class="capability-logo" src="static/img/ubuntu-logo.svg"/></div>
+            <div class="capability-logo-container"><img class="capability-logo" src="{% static 'img/ubuntu-logo.svg' %}"/></div>
         </div>
     </div>
     <div id="capabilities-content">
@@ -68,31 +69,32 @@
 <div class="page col-2 col-1-sm full-height" id="page3">
     <div id="project-text-container">
         <h1 id="projects-title">Our work</h1>
-        <div class="project-text" id="project-0-text">
-            <h4 class="no-m-t">Kirkron</h4>
-            Complete end-to-end business solution. From domain and hosting mangement using AWS to Website development & Office 365 configuration.
-        </div>
-        <div class="project-text" id="project-1-text">
-            <h4 class="no-m-t">Tyler Place family resort</h4>
-            End-to-end development of a custom web app for staff to simplify internal processes and improve reliability of resource assignment.
-        </div>
-        <div class="project-text" id="project-2-text">
-            <h4 class="no-m-t">Want to know more?</h4>
-            Contact us <a href=""><u>here</u></a> to see how we can help you!
-        </div>
+        {% for project in projects %}
+            <div class="project-text" id="project-{{ forloop.counter0 }}-text">
+                <h4 class="no-m-t">{{ project.client }}</h4>
+                {{ project.description }}
+            </div>
+            {% if forloop.last %}
+                <div class="project-text" id="project-{{ forloop.counter }}-text">
+                    <h4 class="no-m-t">Want to know more?</h4>
+                    Contact us <a href="{% url 'home' %}#page4"><u>here</u></a> to see how we can help you!
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
     <div id="project-images-container">
-        <div class="project-image" id="project-0-image">
-            <img class="project-img" src="static/img/kirkron-logo.svg"/>
-        </div>
-        <div class="project-image" id="project-1-image">
-            <img class="project-img" src="static/img/tpPortal-laptop.png"/>
-        </div>
-        <div class="project-image" id="project-2-image">
-            <img class="project-img" src="static/img/tpPortal-phone.png"/>
-        </div>
+        {% for project in projects %}
+            <div class="project-image" id="project-{{ forloop.counter0 }}-image">
+                <img class="project-img" src="{{ project.image.url }}"/>
+            </div>
+        {% if forloop.last %}
+            <div class="project-image" id="project-{{ forloop.counter }}-image">
+                <img class="project-img" src="{% static 'img/tpPortal-phone.png' %}"/>
+            </div>
+        {% endif %}
+    {% endfor %}
         <div>
-            <img id="project-gears" src="static/img/gear-1.svg"/>
+            <img id="project-gears" src="{% static 'img/gear-1.svg' %}"/>
         </div>
     </div>
 </div>
@@ -104,7 +106,8 @@
         
     </div>
     <div class="w-70 w-100-sm center-self-x">
-        <form>
+        <form id="contact-us-form" action="{% url 'contact-us' %}" method="POST">
+            {% csrf_token %}
             <h1>Contact us</h1>
             <div class="input-container">
                 <input class="input-field" type="text" placeholder="Name" name="name"/>
